# h-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
H-CLI code/: SITE_ANALYSIS.md  h-cli.py  install.ps1  install.sh
scripts/: gen_mascot.py  install.ps1  install.sh
src/hcli/: __init__.py  __main__.py  _app.py  cli.py
